src/test/deca/syntax/valid/parser/oracle/class_with_one_method.deca
class A{
    int f(){int i = 0;}
}