src/test/deca/syntax/invalid/parser/oracle/method_block_invalid.deca
class A { a a (){int a; a = a; int b;} }
